--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev --webpack",
+    "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start"
   },
@@ -18,6 +18,7 @@
     "@resvg/resvg-js": "^2.6.2",
     "@tanstack/react-query": "^5.90.12",
     "@walletconnect/ethereum-provider": "^2.21.10",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "next": "16.0.8",
@@ -29,7 +30,8 @@
     "satori": "^0.18.3",
     "tailwind-merge": "^3.4.0",
     "viem": "^2.41.2",
-    "wagmi": "^3.1.0"
+    "wagmi": "^3.1.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
