initializing the frame.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@coinbase/wallet-sdk": "^4.3.7",
     "@covalenthq/client-sdk": "^2.3.7",
+    "@farcaster/frame-sdk": "^0.1.12",
     "@gemini-wallet/core": "^0.3.2",
     "@heroicons/react": "^2.2.0",
     "@metamask/sdk": "^0.33.1",
